--- a/src/components/search-form/travel-datepickup.module.scss
+++ b/src/components/search-form/travel-datepickup.module.scss
@@ -72,7 +72,8 @@
     box-shadow: none;
     border: 1px solid black;
     border-radius: 2px;
-    width: 480px;
+    max-width: 480px;
+    width:90%;
     transition: none;
 }
 
