--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -64,5 +64,6 @@
   background-position: center;
   background-size: cover;
   height: 100vh;
+  min-height: 850px;
 }
 
